--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img id='frontpage_img' src='./frontpageimg.png' style='width: 100%'>
     </div> 
     <div id='btn_container'>
-      <button class='button1'>September 23th at 3pm UTC</button>
+      <button class='button1'>SOLD OUT!</button>
       </div>
     <h2 id='slogan'>Be the lucky one to get a big penis!</h2>
     <h3 id='slogan2'>The first penises in Solana blockchain and one of the first
@@ -41,7 +41,7 @@
     <div class="row">
       <img id='sc_img' src='./3sizes.png' style='width: 100%'></img></div>
     <div class='sc_text'>Pixeldix is a collection of collectible NFTs in the Solana blockchain. 
-      A collection of 8 500 penis algorithmically generated. In our case, and as opposite to most of
+      A collection of 4 250 penis algorithmically generated. In our case, and as opposite to most of
       generated NFTs, we had to take into account the size of the penis to know where to
       place the different elements of each NFT, so rest assured that your penis will not only be
       different from any other NFT collection as it will be different from any other penis size.
@@ -72,12 +72,10 @@
     <div class='topic' id='roadmap'>Attributes</div>
     <div class='roadmap_box_title short_term_title' style='font-family: Oswald, sans-serif;'>More coming soon...</div>
     <img id='img_astr' style='width: 90%;' src='./attributes.png' ></img>
-    <div class='topic' id='roadmap'>Royalties program (new method in tests)</div>
-    <img id='sc_img' style='width: 80%' src='./royalties.png'></img>
     <div class='topic' id='roadmap'>Roadmap (our future plans)</div>
     <div class='roadmap_box short_term'>
       <div class='roadmap_box_title short_term_title'>SHORT-TERM</div>
-      <div class='roadmap_box_text short_term_text'>- Mint the 8 500 sucessfully and in the fairest way possible</br>
+      <div class='roadmap_box_text short_term_text'>- Mint the 4 250 sucessfully and in the fairest way possible</br>
         - Provide Pixeldix holders the ability to sell their Pixeldixs right after the launch</br>
       - Listing in the main marketplaces at the moment. Solanart, Solsea and Digitaleyes</br>
       - Upgrade our website with more info and functionalities</br>
@@ -146,14 +144,14 @@ announce it in the next days ;) )</br>
           NFTs. So expect this to be handled efficiently and professionally.</div>
         </details><details>
         <summary class='faq_question'>What are Pixeldix NFTs?</summary>
-        <div class='faq_answer'>Pixeldixs are 8500 algorithmically generated first of its kind on the Solana 
+        <div class='faq_answer'>Pixeldixs are 4 250 algorithmically generated first of its kind on the Solana 
           Blockchain. They are also one of the first in Solana Blockchain using adaptive
           generation of NFTs. As most NFT collections they will vary on rarity and among
           the attributes there is the size of the penis, a bigger size has a higher level
           of rarity.</div></details>
           <details>
         <summary class='faq_question'>When is the launch?</summary>
-        <p class='faq_answer'>Launch will happen on September 23th at 3pm UTC time, its a thursday.</p>
+        <p class='faq_answer'>Launch will happen on September 30th at 3pm UTC time.</p>
         </details><details>
         <summary class='faq_question'>Which wallets can i use?</summary>
         <div class='faq_answer'>You will be able to use Phantom, Solflare and Sollet wallets.</div>
@@ -163,7 +161,7 @@ announce it in the next days ;) )</br>
           as fair as possible for everyone.</div>
         </details><details>
         <summary class='faq_question'>How much will it cost to mint one Pixeldix?</summary>
-        <div class='faq_answer'>The cost of minting one Pixeldix is 0.8 sol.</div>
+        <div class='faq_answer'>The cost of minting one Pixeldix at pre-sale is 0.25 sol and at public sale is 0.4 sol.</div>
       </details><details>
         <summary class='faq_question'>What is different from all the other projects?</summary>
         <div class='faq_answer'>First of all this concept will be the first one on Solana, and we all know
